fix: enable URL line breaks in Chrome (follow-up)

--- a/_sass/base.scss
+++ b/_sass/base.scss
@@ -239,7 +239,7 @@ a {
   text-shadow: 0 0 5px rgba(104, 182, 255, 0.5);
   word-wrap: break-word;
   overflow-wrap: break-word;
-  word-break: break-all;
+  word-break: break-word;
   max-width: 100%;
 }
 
